name:                fm-client
version:             1.2.2
synopsis:            NetEase Cloud Music FM client in Haskell.
homepage:            http://github.com/foreverbell/fm-client#readme
license:             BSD3
license-file:        LICENSE
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            Music, Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/foreverbell/fm-client

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-tabs
  build-depends:       base >= 4.8 && < 5
                     , random
                     , time
                     , exceptions
                     , process
                     , directory
                     , stm
                     , async
                     , data-default-class
                     , mtl
                     , transformers
                     , vector
                     , bytestring
                     , memory
                     , text
                     , parsec
                     , http-client
                     , http-client-tls
                     , http-types
                     , aeson
                     , base64-bytestring
                     , cryptonite
  exposed-modules:
    FM.Cache
    FM.FM
    FM.NetEase
    FM.Song
  other-modules:
    Control.Concurrent.STM.Lock
    Data.Aeson.Extra
    FM.CacheManager
    FM.NetEase.Crypto
    FM.NetEase.JSON
    FM.Player
    FM.Session

executable fm
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -dynamic -threaded -O2 -W -fwarn-tabs 
  build-depends:       base
                     , transformers
                     , mtl
                     , directory
                     , process
                     , stm
                     , random
                     , containers
                     , data-default-class
                     , brick >= 0.6 && < 0.7
                     , vty
                     , fm-client
  other-modules:
    Types
    UI.Black
    UI.Extra
    UI.Login
    UI.Menu
    UI.Player
